JSON_PROCESSING_SPEC-81: Provide JDK 9 module definition
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>